--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
   </p>
 </section>
 
-  <audio id="background-music" autoplay loop>
-    <source src="photos/music.mp3" type="audio/mpeg">
-  </audio>
+ <audio autoplay loop>
+  <source src="photos/music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 
   <script src="script.js"></script>
 </body>
